# flight_planning

./: .editorconfig  .gitignore  AUTHORS  CMakeLists.txt  LICENSE  README.md
.github/: pull_request_template.md
docs/: event-system.md
docs/development/: styleguide.md
editor/: CMakeLists.txt
editor/src/: main.cpp
editor/src/event/: event.h  event_bus.cpp  event_bus.h  event_dispatcher.cpp  event_dispatcher.h  event_queue.cpp  event_queue.h  event_subscriber.cpp  event_subscriber.h
tests/uavpf_tests/: CMakeLists.txt
tests/uavpf_tests/src/: test_format_str.cpp
tests/uavpf_tests/src/debug/: test_logger.cpp
tests/uavpf_tests/src/id/: test_id_allocator.cpp
uavpf/: CMakeLists.txt
uavpf/config/: config.h.in
uavpf/include/uavpf/: format_str.h  uavpf.h  version.h
uavpf/include/uavpf/debug/: concise_log_formatter.h  console_log_emitter.h  formatted_log.h  log_emitter.h  log_formatter.h  log_level.h  log_record.h  log_source.h  logger.h  logger_provider.h
uavpf/include/uavpf/id/: base_id.h  base_id.hpp  id_allocator.h
uavpf/src/: format_str.cpp  version.cpp
uavpf/src/debug/: concise_log_formatter.cpp  console_log_emitter.cpp  log_record.cpp  logger.cpp  logger_provider.cpp
uavpf/src/id/: id_allocator.cpp
